Added course showcase

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -119,4 +119,8 @@
     @apply bg-background text-foreground;
     font-family: "Noto Sans Arabic", sans-serif;
   }
+
+  input {
+    overflow: hidden !important;
+  }
 }
